reactive-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-app
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: reactive-app
  template:
    metadata:
      labels:
        app: reactive-app
    spec:
      containers:
        - name: reactive-app
          image: bala/reactive-app:v0.1.0
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
---
apiVersion: v1
kind: Service
metadata:
  name: reactive-app
spec:
  selector:
    app: reactive-app
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactive-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: reactive-app
spec:
  rules:
    - host: ra.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: reactive-app
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  revisionHistoryLimit: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:focal
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
